[package]
name = "easy_example"
version = "0.4.1"
authors = ["youngday"]
edition = "2021"

[features]
default = ["log", "platform-verifier", "ring", "runtime-tokio", "rustls"]
# Records how long locks are held, and warns if they are held >= 1ms
lock_tracking = []
# Provides `ClientConfig::with_platform_verifier()` convenience method
platform-verifier = ["proto/platform-verifier"]
rustls = ["dep:rustls", "proto/rustls", "proto/ring"]
# Enables `Endpoint::client` and `Endpoint::server` conveniences
ring = ["proto/ring"]
runtime-tokio = ["tokio/time", "tokio/rt", "tokio/net"]
runtime-async-std = ["async-io", "async-std"]
runtime-smol = ["async-io", "smol"]

# Write logs via the `log` crate when no `tracing` subscriber exists
log = ["tracing/log", "proto/log", "udp/log"]

[dependencies]
log = "0.4"
log4rs = { version = "1.3.0", features = ["toml", "json_encoder"] }
config = "0.14"
once_cell = { version = "1.19.0" }
bytes = "1.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.38", features = ["full", "tracing"] }
# tokio = { version = "1.38", features = ["rt-multi-thread", "time", "fs", "macros", "net"] }
tokio-stream = { version =  "0.1", features = ["net"] }
tokio-util = { version = "0.7", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
tmq = { version = "0.4" }
tokio-serial = "5.4.4"
rumqttc = "0.24.0"
base64 = "0.22"
plotly = { version = "0.8.4",features = ["plotly_image", "plotly_ndarray","kaleido"]}

ndarray = "0.15.6"
rand = "0.8.5"
rand_distr = "0.4.3"
itertools = "0.13.0"
csv = "1.1.6"
#//TODO: to 0.25, used by plotly
image = "0.24.9" 

iceoryx2 ="0.3"
iceoryx2-bb-container = "0.3"

#zenoh+++++
# tokio = {version="1.37",  features = ["rt-multi-thread", "time", "io-std"] }
clap = { version="4.5", features = ["derive"] }
env_logger = "0.11"
flume = "0.11"
git-version = "0.3"
json5 = "0.4"
zenoh = "0.11.0-rc.3"
zenoh-ext = "0.11.0-rc.3"
zenoh-util="0.11.0-rc.3"
#zenoh------

# tonic grpc tls
# https://github.com/hyperium/tonic/issues/1496  from 0.9 to 0.10,0.11 issues: http to https
tonic = { version = "0.11", features = ["tls"] }
prost = "0.12"
prost-types = { version = "0.12", optional = true }
async-stream = "0.3"

#webrtc  axum tokio-tungstenite ++++++++
axum = { version="0.7", features = ["ws"] }
axum-extra = { version="0.9", features = ["typed-header"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
headers = "0.4"
tokio-tungstenite = "0.23"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5.0", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
#webrtc  axum tokio-tungstenite -----------------


# quiche++++++++++++++++++++++++++++++++++++++++++++
async-io = { version = "2.0", optional = true }
async-std = { version = "1.11", optional = true }
# Enables futures::io::{AsyncRead, AsyncWrite} support for streams
futures-io = { version = "0.3.19", optional = true }
rustc-hash = "1.1"
pin-project-lite = "0.2"
quinn="0.11.1"
proto = { package = "quinn-proto",version = "0.11.2", default-features = false }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"], optional = true }
smol = { version = "2", optional = true }
thiserror = "1.0.21"
udp = { package = "quinn-udp",  version = "0.5", default-features = false }
#quiche----------------------------------------------
[dev-dependencies]
# quiche++++++++++++++++++++++++++++++++++++++++++++
anyhow = "1.0.22"
crc = "3"
bencher = "0.1.5"
directories-next = "2"
rand = "0.8"
rcgen = "0.13"
rustls-pemfile = "2"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1.28.1", features = ["rt", "rt-multi-thread", "time", "macros", "sync"] }
tracing-subscriber = { version = "0.3.0", default-features = false, features = ["env-filter", "fmt", "ansi", "time", "local-time"] }
tracing-futures = { version = "0.2.0", default-features = false, features = ["std-future"] }
url = "2"
#quiche----------------------------------------------
[build-dependencies]
tonic-build = { version = "0.11", features = ["prost"] }

[[example]]
name = "3d_charts"
path = "examples/plotly/3d_charts.rs"
[[example]]
name = "basic_charts"
path = "examples/plotly/basic_charts.rs"
[[example]]
name = "custom_controls"
path = "examples/plotly/custom_controls.rs"
[[example]]
name = "financial_charts"
path = "examples/plotly/financial_charts.rs"
[[example]]
name = "images"
path = "examples/plotly/images.rs"
[[example]]
name = "maps"
path = "examples/plotly/maps.rs"
[[example]]
name = "ndarray"
path = "examples/plotly/ndarray.rs"
[[example]]
name = "scientific_charts"
path = "examples/plotly/scientific_charts.rs"
[[example]]
name = "shapes"
path = "examples/plotly/shapes.rs"
[[example]]
name = "subplots"
path = "examples/plotly/subplots.rs"
[[example]]
name = "kaleido_png"
path = "examples/plotly/kaleido_png.rs"
[[example]]
name = "statistical_charts"
path = "examples/plotly/statistical_charts.rs"

# zenoh publish_subscribe
[[example]]
name = "zenoh_pub"
path = "examples/dds_zenoh/z_pub.rs"
[[example]]
name = "zenoh_sub"
path = "examples/dds_zenoh/z_sub.rs"

# iceoryx2 publish_subscribe
[[example]]
name = "ice_pub"
path = "examples/dds_iceoryx2/publisher.rs"
[[example]]
name = "ice_sub"
path = "examples/dds_iceoryx2/subscriber.rs"
[[example]]
name = "discovery"
path = "examples/discovery/discovery.rs"

[[example]]
name = "zmq_pub"
path = "examples/zeromq_tmq/publish.rs"
[[example]]
name = "zmq_sub"
path = "examples/zeromq_tmq/subscriber.rs"
[[example]]
name = "zeromq_tmq"
path = "examples/zeromq_tmq/zeromq_tmq.rs"

# ⚠️ disable comment in build.rs ,workflow not worked on github
# [[example]]
# name = "grpc_client"
# path = "examples/tonic_grpc_tls/client.rs"
# [[example]]
# name = "grpc_server"
# path = "examples/tonic_grpc_tls/server.rs"

[[example]]
name = "ws_server"
path = "examples/websocket_axum/server.rs"

[[example]]
name = "ws_client"
path = "examples/websocket_axum/client.rs"

[[example]]
name = "quic_client"
path = "examples/quic/client.rs"

[[example]]
name = "quic_server"
path = "examples/quic/server.rs"