[package]
name = "easy_example"
version = "0.4.1"
authors = ["youngday"]
edition = "2021"

[features]
default = ["log", "platform-verifier", "ring", "runtime-tokio", "rustls"]
# Records how long locks are held, and warns if they are held >= 1ms
lock_tracking = []
# Provides `ClientConfig::with_platform_verifier()` convenience method
platform-verifier = ["proto/platform-verifier"]
rustls = ["dep:rustls", "proto/rustls", "proto/ring"]
# Enables `Endpoint::client` and `Endpoint::server` conveniences
ring = ["proto/ring"]
runtime-tokio = ["tokio/time", "tokio/rt", "tokio/net"]
runtime-async-std = ["async-io", "async-std"]
runtime-smol = ["async-io", "smol"]

# Write logs via the `log` crate when no `tracing` subscriber exists
log = ["tracing/log", "proto/log", "udp/log"]

[dependencies]
log = "0.4"
log4rs = { version = "1.3.0", features = ["toml", "json_encoder"] }
config = "0.14"
once_cell = { version = "1.19.0" }
bytes = "1.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.38", features = ["full", "tracing"] }
# tokio = { version = "1.38", features = ["rt-multi-thread", "time", "fs", "macros", "net"] }
tokio-stream = { version =  "0.1", features = ["net"] }
tokio-util = { version = "0.7", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
tmq = { version = "0.4" }
tokio-serial = "5.4.4"
rumqttc = "0.24.0"
base64 = "0.22"

ndarray = "0.15.6"
rand = "0.8.5"
rand_distr = "0.4.3"
itertools = "0.13.0"
csv = "1.3"
image = "0.25.1" 

iceoryx2 ="0.3"
iceoryx2-bb-container = "0.3"

#zenoh+++++
# tokio = {version="1.37",  features = ["rt-multi-thread", "time", "io-std"] }
clap = { version="4.5", features = ["derive"] }
env_logger = "0.11"
flume = "0.11"
git-version = "0.3"
json5 = "0.4"
zenoh = "0.11.0"
zenoh-ext = "0.11.0"
zenoh-util="0.11.0"
#zenoh------


axum = { version="0.7", features = ["ws"] }
axum-extra = { version="0.9", features = ["typed-header"] }
poem="3.0.1"

futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
headers = "0.4"
tokio-tungstenite = "0.23"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5.0", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }



# quiche++++++++++++++++++++++++++++++++++++++++++++
async-io = { version = "2.3", optional = true }
async-std = { version = "1.12", optional = true }
# Enables futures::io::{AsyncRead, AsyncWrite} support for streams
futures-io = { version = "0.3", optional = true }
rustc-hash = "2.0.0"
pin-project-lite = "0.2.14"
quinn="0.11.1"
proto = { package = "quinn-proto",version = "0.11.2", default-features = false }
protoc-rust = "2"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"], optional = true }
smol = { version = "2", optional = true }
thiserror = "1.0"
udp = { package = "quinn-udp",  version = "0.5", default-features = false }
#quiche----------------------------------------------




[dev-dependencies]
# quiche++++++++++++++++++++++++++++++++++++++++++++
anyhow = "1.0"
crc = "3.2"
bencher = "0.1.5"
directories-next = "2.0"
rand = "0.8"
rcgen = "0.13"
rustls-pemfile = "2.1"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.38", features = ["rt", "rt-multi-thread", "time", "macros", "sync"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt", "ansi", "time", "local-time"] }
tracing-futures = { version = "0.2", default-features = false, features = ["std-future"] }
url = "2.5"
#quiche----------------------------------------------

[build-dependencies]
poem-grpc-build="0.4.0"

# zenoh publish_subscribe
[[example]]
name = "zenoh_pub"
path = "examples/dds_zenoh/z_pub.rs"
[[example]]
name = "zenoh_sub"
path = "examples/dds_zenoh/z_sub.rs"

# iceoryx2 publish_subscribe
[[example]]
name = "ice_pub"
path = "examples/dds_iceoryx2/publisher.rs"
[[example]]
name = "ice_sub"
path = "examples/dds_iceoryx2/subscriber.rs"
[[example]]
name = "discovery"
path = "examples/discovery/discovery.rs"

[[example]]
name = "zmq_pub"
path = "examples/zeromq_tmq/publish.rs"
[[example]]
name = "zmq_sub"
path = "examples/zeromq_tmq/subscriber.rs"
[[example]]
name = "zeromq_tmq"
path = "examples/zeromq_tmq/zeromq_tmq.rs"

[[example]]
name = "ws_server"
path = "examples/websocket_axum/server.rs"

[[example]]
name = "ws_client"
path = "examples/websocket_axum/client.rs"

[[example]]
name = "quic_client"
path = "examples/quic/client.rs"

[[example]]
name = "quic_server"
path = "examples/quic/server.rs"

